miniextendr-macros/tests/ui/derive_rconvert_unknown_option.stderr
error: unknown #[rconvert] option; expected `forward`, `from = <bool>`, or `into = <bool>`
 --> tests/ui/derive_rconvert_unknown_option.rs:6:12
  |
6 | #[rconvert(backward)]
  |            ^^^^^^^^
