miniextendr-macros/tests/ui/derive_rconvert_unknown_option.rs
//! Test: `#[derive(RConvert)]` rejects unknown `#[rconvert(...)]` options.

use miniextendr_macros::RConvert;

#[derive(RConvert)]
#[rconvert(backward)]
struct Wrong(f64);

fn main() {}
